Hovering a BugListSegment highlights the segment on the board if visible (and shows its inspector)

--- a/code/UI/Panels/GameHud/BugListHud/BugListEntry.razor.scss
+++ b/code/UI/Panels/GameHud/BugListHud/BugListEntry.razor.scss
@@ -2,4 +2,5 @@ BugListEntry
 {
 	flex-direction: row;
     gap: 2px;
+    pointer-events: all;
 }
