--- a/code/UI/Panels/GameHud/BugListHud/BugListSegment.razor.scss
+++ b/code/UI/Panels/GameHud/BugListHud/BugListSegment.razor.scss
@@ -7,6 +7,7 @@ BugListSegment
 	justify-content: flex-end;
 	align-items: flex-end;
 	border-radius: 12px;
+    pointer-events: all;
 
 	label
 	{
